# concord-bft

bftclient/include/bftclient/: bft_client.h  metrics.h
bftclient/src/: bft_client.cpp
bftengine/include/bftengine/: Replica.hpp  ReplicaConfig.hpp
bftengine/src/bcstatetransfer/: BCStateTran.cpp
bftengine/src/bftengine/: ReplicaConfigSerializer.cpp  ReplicaImp.cpp  ReplicaImp.hpp  ReplicaLoader.cpp  RequestHandler.cpp  RequestHandler.h  RequestsBatchingLogic.cpp  SigManager.cpp  SigManager.hpp  SimpleClientImp.cpp
bftengine/src/preprocessor/: PreProcessor.cpp  PreProcessor.hpp
client/: CMakeLists.txt
client/client_pool/: client_pool_config.cpp  client_pool_config.hpp  concord_client_pool.cpp  concord_client_pool.hpp  external_client.cpp  external_client.hpp  trace_contexts.cpp  trace_contexts.hpp
client/external_client/: CMakeLists.txt  client_pool_config.hpp  concord_client_pool.cpp  concord_client_pool.hpp  external_client.cpp  external_client.hpp
client/external_client/example/: CMakeLists.txt  DockerfileClientPoolExample  README.md  client_pool_example.cpp
communication/src/: AsyncTlsConnection.cpp  AsyncTlsConnection.h  TlsConnectionManager.cpp  TlsTCPCommunication.cpp
diagnostics/: concord-ctl
diagnostics/include/: diagnostics_server.h
kvbc/include/: KVBCInterfaces.h
storage/src/: rocksdb_client.cpp
tests/apollo/util/: bft.py
tests/simpleKVBC/TesterReplica/: internalCommandsHandler.cpp  internalCommandsHandler.hpp  (+1 more)
tests/simpleTest/: simple_test_replica.hpp
util/: CMakeLists.txt
util/include/: errnoString.hpp  json_serializer.hpp
(+3 files in other folders)
